intro: alignment fix

--- a/src/components/style/intro.less
+++ b/src/components/style/intro.less
@@ -37,10 +37,9 @@
     }
 }
 
-@mobileSize: 450px;
-
 .sub_intro {
     align-items: flex-end;
+    justify-content: center;
 
     @media (max-width: @mobileSize) {
         flex-direction: column;
